# homedb

./: .gitignore  Makefile  pyproject.toml
.github/workflows/: django.yaml
homedb/: README.md  asgi.py  manage.py
homedb/homedb/: asgi.py  settings.py  urls.py  wsgi.py
homedb/inventory/: admin.py  models.py  serializers.py  tests.py  urls.py  viewsets.py
