[tool.poetry]
name = "homedb"
version = "0.1.0"
description = ""
authors = ["Jon <jon.p.hammer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
ruff = "^0.0.261"
isort = "^5.12.0"
black = "^23.3.0"
pyyaml = "^6.0"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
